--- a/content/post/0.1Study_Powershell.md
+++ b/content/post/0.1Study_Powershell.md
@@ -18,4 +18,8 @@ date = "2017-04-28T15:10:38+08:00"
 ### Reference
 Hey， Scripting Guy！blog
 
+
+####Tip
+Use multiple commands on a single Windows PowerShell line. Type each complete command, and then use a semicolon to separate each command.
+
 Read until 39
